--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,12 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "mongoose": "^7.0.0"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.0",
+    "muller": "^1.1.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
