--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jszip": "^3.10.1",
     "mongoose": "^7.0.0",
     "muller": "^1.1.0",
     "multer": "^2.0.2"
