--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^19.1.11",
@@ -20,6 +27,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-  "vite": "^4.4.9"
+    "vite": "^4.4.9"
   }
 }
