--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "jszip": "^3.10.1",
     "mongoose": "^7.0.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
